--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=sonsation-server
+
+# Load env
+spring.config.import=optional:file:.env[.properties]
+
+# DB Setting
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWD}
+
+# Disable DDL auto-generation
+spring.jpa.hibernate.ddl-auto=none
+
+# Server Setting
+server.port=${SERVER_PORT}
